--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: chainguard-dev/actions/setup-chainctl@main
         with:
-          identity: e3b934ffcb89d0c85a3e87e40092de2cc5eff566/844585f9dd79c40e  # from above
+          identity: 8c3a5484d4dab21a2c65244549dee4a668dabb09/fcae7a3c98194b38
       - uses: actions/setup-java@v3
         with:
           java-version: 11
